# Checkpointing-and-Recovery-toolkit-for-long-running-ML-training-jobs

./: README.md  pyproject.toml
dashboards/: grafana_checkpoint_health.json
examples/: prometheus.yml  toy_train_with_ckptkit.py
scripts/: validate_loop.sh  watch_corruption.sh
src/ckptkit/: __init__.py  atomic.py  cli.py  config.py  fs.py  hashing.py  logging.py  manifest.py  metrics.py  quarantine.py  resume.py  validate.py
src/ckptkit/integrations/: __init__.py  deepspeed.py  pytorch.py
tests/: test_atomic.py  test_manifest.py  test_metrics.py  test_resume.py  test_validate.py
