[project]
name = "ckptkit"
version = "0.1.0"
description = "Checkpointing & Recovery Toolkit for long-running ML training jobs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Checkpointing & Recovery Toolkit"}]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://example.com/ckptkit"

[project.scripts]
ckptkit = "ckptkit.cli:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["ckptkit"]
